--- a/BlogViewer/Storyboard.storyboard
+++ b/BlogViewer/Storyboard.storyboard
@@ -588,11 +588,11 @@
                                             <constraint firstItem="4db-7l-yUJ" firstAttribute="leading" secondItem="Ujz-Ck-Pm8" secondAttribute="leading" constant="20" type="default" id="2uw-mq-5W7"/>
                                             <constraint firstAttribute="bottom" secondItem="4db-7l-yUJ" secondAttribute="bottom" constant="21" id="4LS-2N-aXe"/>
                                             <constraint firstItem="Luk-vI-Xrc" firstAttribute="leading" secondItem="Ujz-Ck-Pm8" secondAttribute="leading" constant="20" type="default" id="IHS-O8-7MZ"/>
+                                            <constraint firstItem="Luk-vI-Xrc" firstAttribute="centerY" secondItem="Ujz-Ck-Pm8" secondAttribute="centerY" type="default" id="WvK-BM-Ao6"/>
                                             <constraint firstAttribute="trailing" secondItem="3h2-07-oME" secondAttribute="trailing" constant="13" id="Zrn-uu-HHd"/>
+                                            <constraint firstItem="uiL-Ff-OBK" firstAttribute="top" secondItem="Ujz-Ck-Pm8" secondAttribute="top" constant="3" id="b35-Xz-Cau"/>
                                             <constraint firstItem="3h2-07-oME" firstAttribute="top" secondItem="4db-7l-yUJ" secondAttribute="top" type="default" id="bZN-YH-Dw1"/>
                                             <constraint firstItem="uiL-Ff-OBK" firstAttribute="leading" secondItem="Ujz-Ck-Pm8" secondAttribute="leading" constant="20" type="default" id="dbT-Gw-a3P"/>
-                                            <constraint firstItem="uiL-Ff-OBK" firstAttribute="top" secondItem="Ujz-Ck-Pm8" secondAttribute="top" type="default" id="lph-Y8-Uqm"/>
-                                            <constraint firstItem="Luk-vI-Xrc" firstAttribute="top" secondItem="Ujz-Ck-Pm8" secondAttribute="top" constant="50" id="rCB-km-7OQ"/>
                                             <constraint firstAttribute="trailing" secondItem="uiL-Ff-OBK" secondAttribute="trailing" constant="20" type="default" id="zP1-fk-47D"/>
                                             <constraint firstItem="3h2-07-oME" firstAttribute="baseline" secondItem="4db-7l-yUJ" secondAttribute="baseline" type="default" id="zWR-MN-3ZQ"/>
                                         </constraints>
@@ -1105,10 +1105,14 @@
         <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
         </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
         <class className="WebViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/WebViewController.h"/>
             <relationships>
                 <relationship kind="action" name="pressFavoriteButton:"/>
+                <relationship kind="action" name="showActionsheet:"/>
                 <relationship kind="outlet" name="_favoritebutton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="_gobackbutton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="_goforwardbutton" candidateClass="UIBarButtonItem"/>
